--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "node": "8.9.4",
     "npm": "5.6.0"
   },
-  "homepage": "/assets"
+  "homepage": "/assets",
+  "devDependencies": {
+    "autoprefixer": "^9.7.1",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.1.3"
+  }
 }
