--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "build:style": "tailwind build src/styles/tailwind.css -o src/styles/index.css",
-    "start": "npm run build:style && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -19,10 +18,5 @@
     "node": "8.9.4",
     "npm": "5.6.0"
   },
-  "homepage": "/assets",
-  "devDependencies": {
-    "autoprefixer": "^9.7.1",
-    "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.1.3"
-  }
+  "homepage": "/assets"
 }
