--- a/_.env
+++ b/_.env
@@ -3,6 +3,7 @@
 # Please make sure every field has a value
 
 SETTINGS_ENV=DEVELOPMENT
+DATABASE_NAME=
 DATABASE_URL=localhost
 DATABASE_USER=
 DATABASE_PSWD=
